[gd_scene load_steps=40 format=3 uid="uid://ojiqquu31swu"]

[ext_resource type="Script" path="res://script/Main.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b5hnrptr5vycq" path="res://images/ROOM1.png" id="2"]
[ext_resource type="Script" path="res://playerinfo.gd" id="2_0m2ro"]
[ext_resource type="Shader" path="res://shaders/crtwave_shader.gdshader" id="3"]
[ext_resource type="Texture2D" uid="uid://brhxby5u1fi1w" path="res://images/12.png" id="4"]
[ext_resource type="Texture2D" uid="uid://coichkqggbuhu" path="res://images/13.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b0yp0g5mkscek" path="res://images/14.png" id="6"]
[ext_resource type="Texture2D" uid="uid://c1xrl4p16dfoo" path="res://images/15.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cjf25em18pewr" path="res://images/16.png" id="8"]
[ext_resource type="Texture2D" uid="uid://che1ww06g53pp" path="res://images/17.png" id="9"]
[ext_resource type="Texture2D" uid="uid://c6qfklsdlbfm1" path="res://images/18.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bt46gkqsdc4x3" path="res://images/title.png" id="11"]
[ext_resource type="Texture2D" uid="uid://b3y7dkvhe3fr2" path="res://images/593.png" id="12"]
[ext_resource type="AudioStream" uid="uid://dl0lhh71bdqvx" path="res://sounds/switch.wav" id="13"]
[ext_resource type="FontFile" uid="uid://dqs6ndo2fefjx" path="res://fonts/AuraDianZhenSong-2.ttf" id="13_l8n53"]
[ext_resource type="AudioStream" uid="uid://bfolaxgv1b1x3" path="res://sounds/bgm.mp3" id="14"]
[ext_resource type="Texture2D" uid="uid://03ribww3f7l5" path="res://images/4.png" id="15"]
[ext_resource type="Texture2D" uid="uid://b84b6gcu1auhp" path="res://images/6.png" id="16"]
[ext_resource type="Texture2D" uid="uid://c82nkw5u3indm" path="res://images/8.png" id="17"]
[ext_resource type="Texture2D" uid="uid://cxo3m7opmqwhy" path="res://images/9.png" id="18"]
[ext_resource type="Texture2D" uid="uid://cbto6mm7ikjv4" path="res://images/10.png" id="19"]
[ext_resource type="Texture2D" uid="uid://icuylahv58sm" path="res://images/21.png" id="20"]
[ext_resource type="Texture2D" uid="uid://dmnxp5khk8w42" path="res://images/22.png" id="21"]
[ext_resource type="Texture2D" uid="uid://beewi6vixt3pc" path="res://images/25.png" id="22"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yeogp"]
shader = ExtResource("3")
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="GDScript" id="3"]
script/source = "extends Node2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="StyleBoxEmpty" id="4"]

[sub_resource type="StyleBoxEmpty" id="5"]

[sub_resource type="StyleBoxEmpty" id="7"]

[sub_resource type="StyleBoxEmpty" id="8"]

[sub_resource type="StyleBoxEmpty" id="9"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8kt1e"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eu5e0"]

[sub_resource type="Animation" id="10"]
length = 0.001

[sub_resource type="Animation" id="11"]
resource_name = "new_animation"
length = 0.07
loop_mode = 1

[sub_resource type="Animation" id="Animation_02yj4"]
resource_name = "new_animation_2"
length = 3.0

[sub_resource type="AnimationLibrary" id="12"]
_data = {
"RESET": SubResource("10"),
"new_animation": SubResource("11"),
"new_animation_2": SubResource("Animation_02yj4")
}

[sub_resource type="SpriteFrames" id="13"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15")
}, {
"duration": 1.0,
"texture": ExtResource("16")
}, {
"duration": 1.0,
"texture": ExtResource("17")
}, {
"duration": 1.0,
"texture": ExtResource("18")
}, {
"duration": 1.0,
"texture": ExtResource("19")
}, {
"duration": 1.0,
"texture": ExtResource("20")
}, {
"duration": 1.0,
"texture": ExtResource("21")
}, {
"duration": 1.0,
"texture": ExtResource("22")
}],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="Node" type="Node" parent="."]
script = ExtResource("2_0m2ro")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="BG_bakery" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(574, 336)
scale = Vector2(0.963333, 0.885)
texture = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_yeogp")
offset_left = -55.0
offset_top = -91.0
offset_right = 1176.0
offset_bottom = 686.0

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-99, -116)
scale = Vector2(1.19815, 1.18704)
color = Color(0, 0, 0, 0.247059)
polygon = PackedVector2Array(57.5888, 35.3821, 413.137, 61.4975, 415.977, 686.456, -77, 688)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.305882)
position = Vector2(573, 317)
sprite_frames = SubResource("2")
autoplay = "default"
frame_progress = 0.497243

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -51.0
offset_top = -28.0
offset_right = 1164.0
offset_bottom = 662.0
color = Color(0, 0, 0, 0.509804)

[node name="stuff" type="Node2D" parent="."]

[node name="Logo" type="Sprite2D" parent="stuff"]
position = Vector2(186.989, 157)
scale = Vector2(0.465278, 0.465278)
texture = ExtResource("11")

[node name="buttons" type="Node2D" parent="stuff"]
position = Vector2(56, 184)
scale = Vector2(0.515607, 0.635407)
script = SubResource("3")

[node name="Button_newgame" type="Button" parent="stuff/buttons"]
offset_left = 56.0
offset_top = 216.0
offset_right = 112.0
offset_bottom = 247.0
scale = Vector2(1.32463, 1.003)
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("4")
toggle_mode = true
button_pressed = true
text = "新游戏"
flat = true
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="Button_continue" type="Button" parent="stuff/buttons"]
offset_left = 56.2444
offset_top = 281.709
offset_right = 187.244
offset_bottom = 346.709
scale = Vector2(1.32463, 1.003)
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("5")
toggle_mode = true
button_pressed = true
text = "继续"
flat = true
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="Button_about" type="Button" parent="stuff/buttons"]
offset_left = 56.2444
offset_top = 339.939
offset_right = 187.244
offset_bottom = 404.939
scale = Vector2(1.32463, 1.003)
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("7")
toggle_mode = true
button_pressed = true
text = "关于"
flat = true
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="stuff/buttons/Button_about"]
visible = false
layout_mode = 0
offset_left = 540.274
offset_top = -409.533
offset_right = 965.274
offset_bottom = -264.533
text = "这是Five Nights At Freddy's(FNaF)的一款粉丝同人游戏
做给面包狂魔植粉(漱口水)
制作:橡皮EraComBat
引擎:Godot 4
在这里下载源代码:
bilibili:"

[node name="LinkButton" type="LinkButton" parent="stuff/buttons/Button_about/RichTextLabel"]
layout_mode = 0
offset_left = 134.176
offset_top = 93.2416
offset_right = 216.176
offset_bottom = 133.242
text = "github仓库"
uri = "https://github.com/EraComBat/FiveNightsAtZhifens"

[node name="Button_customnight" type="Button" parent="stuff/buttons"]
offset_left = 56.2444
offset_top = 404.465
offset_right = 228.244
offset_bottom = 469.465
scale = Vector2(1.32463, 1.003)
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("8")
toggle_mode = true
button_pressed = true
text = "自定义夜"
flat = true
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="Button_quit" type="Button" parent="stuff/buttons"]
offset_left = 56.2444
offset_top = 468.99
offset_right = 187.244
offset_bottom = 533.99
scale = Vector2(1.32463, 1.003)
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("9")
toggle_mode = true
button_pressed = true
text = "退出"
flat = true
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="delete" type="Button" parent="stuff"]
visible = false
offset_left = 596.0
offset_top = 426.0
offset_right = 740.0
offset_bottom = 466.0
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 36
text = "清空所有数据"

[node name="Label" type="Label" parent="stuff/delete"]
visible = false
layout_mode = 0
offset_left = -13.0
offset_top = -147.0
offset_right = 166.0
offset_bottom = -77.0
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 51
text = "你确定?"

[node name="yes" type="Button" parent="stuff/delete/Label"]
layout_mode = 0
offset_left = -12.0
offset_top = 77.0
offset_right = 53.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("13_l8n53")
text = "确定"

[node name="no" type="Button" parent="stuff/delete/Label"]
layout_mode = 0
offset_left = 113.0
offset_top = 75.0
offset_right = 180.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("13_l8n53")
text = "取消"

[node name="star2" type="Sprite2D" parent="stuff"]
visible = false
position = Vector2(524, 241)
scale = Vector2(1.42355, 1.42355)
texture = ExtResource("12")

[node name="two" type="PanelContainer" parent="stuff/star2"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.347658, 0.347658)
theme_override_styles/panel = SubResource("StyleBoxFlat_8kt1e")

[node name="Label" type="Label" parent="stuff/star2/two"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 56
text = "最佳加班员工:
通关第六夜"

[node name="er" type="PanelContainer" parent="stuff/star2"]
offset_left = -28.0
offset_top = -27.0
offset_right = 28.0
offset_bottom = 27.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_eu5e0")

[node name="star1" type="Sprite2D" parent="stuff"]
visible = false
position = Vector2(441, 242)
scale = Vector2(1.42355, 1.42355)
texture = ExtResource("12")

[node name="one" type="PanelContainer" parent="stuff/star1"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.347658, 0.347658)
theme_override_styles/panel = SubResource("StyleBoxFlat_8kt1e")

[node name="Label" type="Label" parent="stuff/star1/one"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 56
text = "优秀员工:
通关第五夜"

[node name="yi" type="PanelContainer" parent="stuff/star1"]
offset_left = -28.0
offset_top = -27.0
offset_right = 28.0
offset_bottom = 27.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_eu5e0")

[node name="star3" type="Sprite2D" parent="stuff"]
visible = false
position = Vector2(483, 155)
scale = Vector2(1.72996, 1.72996)
texture = ExtResource("12")

[node name="three" type="PanelContainer" parent="stuff/star3"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.347658, 0.347658)
theme_override_styles/panel = SubResource("StyleBoxFlat_8kt1e")

[node name="Label" type="Label" parent="stuff/star3/three"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 56
text = "还是保安大佬:
通关自定义夜全20
你是!我的神!"

[node name="san" type="PanelContainer" parent="stuff/star3"]
offset_left = -28.0
offset_top = -27.0
offset_right = 28.0
offset_bottom = 27.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_eu5e0")

[node name="version" type="Label" parent="stuff"]
offset_left = 5.0
offset_top = 612.0
offset_right = 544.0
offset_bottom = 677.0
scale = Vector2(0.415784, 0.367547)
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 47
text = "v1.0.0 Windows"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="stuff"]
stream = ExtResource("13")
volume_db = 10.0

[node name="about" type="Label" parent="stuff"]
visible = false
offset_left = 400.0
offset_top = 174.0
offset_right = 919.0
offset_bottom = 513.0
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 28
text = "这是FNAF的一款同人游戏
做给面包狂魔植粉/漱口水
引擎:Godot 4.3
程序:橡皮
贴图:高姐d,小调,橡皮
电话配音:增增
"

[node name="Button" type="Button" parent="stuff/about"]
layout_mode = 0
offset_top = 262.0
offset_right = 54.0
offset_bottom = 304.0
theme_override_fonts/font = ExtResource("13_l8n53")
text = "返回"

[node name="AnimationPlayer" type="AnimationPlayer" parent="stuff"]
libraries = {
"": SubResource("12")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(572, 319)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="bgmPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14")
volume_db = 4.0

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
offset_right = 1165.0
offset_bottom = 656.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect3"]
material = SubResource("ShaderMaterial_yeogp")
layout_mode = 0
offset_right = 1150.0
offset_bottom = 650.0

[node name="Label" type="Label" parent="ColorRect3"]
layout_mode = 0
offset_left = 75.0
offset_top = 144.0
offset_right = 1083.0
offset_bottom = 372.0
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 56
text = "警告:
本游戏含有闪光,跳脸,恐怖等元素
心脏病或光敏性癫痫患者请勿游玩此游戏
"
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ColorRect3"]
modulate = Color(1, 1, 1, 0.305882)
position = Vector2(573, 317)
sprite_frames = SubResource("2")
autoplay = "default"
frame_progress = 0.547099

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(581, 359)
sprite_frames = SubResource("13")
frame = 7
frame_progress = 1.0

[node name="settings" type="Button" parent="."]
offset_left = 991.0
offset_top = 593.0
offset_right = 1135.0
offset_bottom = 633.0
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 20
text = "设置"

[node name="settings3" type="Button" parent="."]
visible = false
offset_left = 595.0
offset_top = 284.0
offset_right = 739.0
offset_bottom = 340.0
theme_override_fonts/font = ExtResource("13_l8n53")
theme_override_font_sizes/font_size = 36
text = "显示fps"

[connection signal="mouse_entered" from="stuff/buttons/Button_newgame" to="." method="_on_button_newgame_mouse_entered"]
[connection signal="mouse_exited" from="stuff/buttons/Button_newgame" to="." method="_on_button_newgame_mouse_exited"]
[connection signal="pressed" from="stuff/buttons/Button_newgame" to="." method="_on_button_newgame_pressed"]
[connection signal="mouse_entered" from="stuff/buttons/Button_continue" to="." method="_on_button_continue_mouse_entered"]
[connection signal="mouse_exited" from="stuff/buttons/Button_continue" to="." method="_on_button_continue_mouse_exited"]
[connection signal="pressed" from="stuff/buttons/Button_continue" to="." method="_on_button_continue_pressed"]
[connection signal="mouse_entered" from="stuff/buttons/Button_about" to="." method="_on_button_about_mouse_entered"]
[connection signal="mouse_exited" from="stuff/buttons/Button_about" to="." method="_on_button_about_mouse_exited"]
[connection signal="pressed" from="stuff/buttons/Button_about" to="." method="_on_button_about_pressed"]
[connection signal="mouse_entered" from="stuff/buttons/Button_customnight" to="." method="_on_button_customnight_mouse_entered"]
[connection signal="mouse_exited" from="stuff/buttons/Button_customnight" to="." method="_on_button_customnight_mouse_exited"]
[connection signal="pressed" from="stuff/buttons/Button_customnight" to="." method="_on_button_customnight_pressed"]
[connection signal="button_down" from="stuff/buttons/Button_quit" to="." method="_on_button_quit_button_down"]
[connection signal="mouse_entered" from="stuff/buttons/Button_quit" to="." method="_on_button_quit_mouse_entered"]
[connection signal="mouse_exited" from="stuff/buttons/Button_quit" to="." method="_on_button_quit_mouse_exited"]
[connection signal="pressed" from="stuff/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="stuff/delete/Label/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="stuff/delete/Label/no" to="." method="_on_no_pressed"]
[connection signal="mouse_entered" from="stuff/star2/er" to="." method="_on_er_mouse_entered"]
[connection signal="mouse_exited" from="stuff/star2/er" to="." method="_on_er_mouse_exited"]
[connection signal="mouse_entered" from="stuff/star1/yi" to="." method="_on_yi_mouse_entered"]
[connection signal="mouse_exited" from="stuff/star1/yi" to="." method="_on_yi_mouse_exited"]
[connection signal="mouse_entered" from="stuff/star3/san" to="." method="_on_san_mouse_entered"]
[connection signal="mouse_exited" from="stuff/star3/san" to="." method="_on_san_mouse_exited"]
[connection signal="finished" from="stuff/AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
[connection signal="pressed" from="stuff/about/Button" to="." method="_on_button_pressed"]
[connection signal="finished" from="bgmPlayer" to="." method="_on_bgm_player_finished"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="settings3" to="." method="_on_settings_3_pressed"]
